--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "example of using koajs with socket.io and passport auth",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mkozhukharenko/koa-socket.io-passport.git"
+  },
   "scripts": {
     "test": "gulp test"
   },
@@ -22,6 +26,7 @@
     "cookie-parser": "^1.4.0",
     "crypto": "0.0.3",
     "jade": "^1.11.0",
+    "kerberos": "~0.0.17",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
     "koa-compose": "^3.0.0",
@@ -37,9 +42,16 @@
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "socket.io-adapter-mongo": "^0.1.5",
+    "socket.io-mongodb-emitter": "^0.1.2"
   },
   "devDependencies": {
-    "gulp-nodemon": "^2.0.4"
+    "clarify": "^1.0.5",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.4",
+    "nodemon": "^1.8.1",
+    "stack-chain": "^1.3.5",
+    "trace": "^2.1.0"
   }
 }
